--- a/notebooks/model_finetune.ipynb
+++ b/notebooks/model_finetune.ipynb
@@ -1,7 +1,12 @@
 {
  "cells": [
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T18:21:20.631802Z",
+     "start_time": "2025-01-28T18:21:19.722825Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "import torch\n",
@@ -12,11 +17,26 @@
     "    print(f\"GPU Device: {torch.cuda.get_device_name(0)}\")\n"
    ],
    "id": "6c66ffe4655abc5e",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA available: True\n",
+      "CUDA version: 12.1\n",
+      "GPU Device: NVIDIA GeForce RTX 4090\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T18:21:20.639144Z",
+     "start_time": "2025-01-28T18:21:20.633849Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "from dotenv import load_dotenv\n",
@@ -35,10 +55,15 @@
    ],
    "id": "e533277720089dcf",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 2
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T18:21:23.277436Z",
+     "start_time": "2025-01-28T18:21:20.708055Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "from transformers import (\n",
@@ -59,10 +84,15 @@
    ],
    "id": "9e21f997b648e218",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 3
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T18:21:23.546031Z",
+     "start_time": "2025-01-28T18:21:23.281252Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "from huggingface_hub import login\n",
@@ -71,10 +101,15 @@
    ],
    "id": "aaafa79785bc72a5",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 4
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T18:21:25.383136Z",
+     "start_time": "2025-01-28T18:21:23.550248Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "wandb.login(key=wandb_api_key)\n",
@@ -86,11 +121,100 @@
     ")"
    ],
    "id": "1e197bf918aa209e",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "wandb: Currently logged in as: morganj-lee01 (morganj-lee01-team). Use `wandb login --relogin` to force relogin\n",
+      "wandb: WARNING If you're specifying your api key in code, ensure this code is not shared publicly.\n",
+      "wandb: WARNING Consider setting the WANDB_API_KEY environment variable, or running `wandb login` from the command line.\n",
+      "wandb: Appending key for api.wandb.ai to your netrc file: C:\\Users\\morga\\_netrc\n",
+      "wandb: Using wandb-core as the SDK backend.  Please refer to https://wandb.me/wandb-core for more information.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "Tracking run with wandb version 0.19.4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "Run data is saved locally in <code>E:\\PyCharm\\PycharmProjects\\repurposed-llm-phishing-classifier\\notebooks\\wandb\\run-20250129_022124-hphrnlup</code>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/hphrnlup?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">atomic-elevator-10</a></strong> to <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       " View project at <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986</a>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       " View run at <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/hphrnlup?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/hphrnlup?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986</a>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "Do NOT share these links with anyone. They can be used to claim your runs."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 5
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T18:21:25.390451Z",
+     "start_time": "2025-01-28T18:21:25.387327Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "base_model_path = \"../models/llama_models/llama-3.2-3B\"\n",
@@ -100,10 +224,15 @@
    ],
    "id": "510dfcf5597f3943",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 6
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T18:21:25.669359Z",
+     "start_time": "2025-01-28T18:21:25.394531Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "train_df = pd.read_csv(train_dataset_path)\n",
@@ -111,11 +240,98 @@
     "train_df.head()"
    ],
    "id": "a9e9e085312d0019",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                                              system  \\\n",
+       "0  You are a classification system designed to ca...   \n",
+       "1  You are a classification system designed to ca...   \n",
+       "2  You are a classification system designed to ca...   \n",
+       "3  You are a classification system designed to ca...   \n",
+       "4  You are a classification system designed to ca...   \n",
+       "\n",
+       "                                                user  assistant  \n",
+       "0  Message for review: write me back please year ...       True  \n",
+       "1  Message for review: I just picked up Razor SDK...      False  \n",
+       "2  Message for review: vacation goodmorning , i w...      False  \n",
+       "3  Message for review: On Thu, Aug 08, 2002 at 11...      False  \n",
+       "4  Message for review: wellheads shoreline has se...      False  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>system</th>\n",
+       "      <th>user</th>\n",
+       "      <th>assistant</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>You are a classification system designed to ca...</td>\n",
+       "      <td>Message for review: write me back please year ...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>You are a classification system designed to ca...</td>\n",
+       "      <td>Message for review: I just picked up Razor SDK...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>You are a classification system designed to ca...</td>\n",
+       "      <td>Message for review: vacation goodmorning , i w...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>You are a classification system designed to ca...</td>\n",
+       "      <td>Message for review: On Thu, Aug 08, 2002 at 11...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>You are a classification system designed to ca...</td>\n",
+       "      <td>Message for review: wellheads shoreline has se...</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T18:21:25.691893Z",
+     "start_time": "2025-01-28T18:21:25.689452Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "model_config = {\n",
@@ -126,10 +342,15 @@
    ],
    "id": "51d47220f5319bbf",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 8
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T18:21:28.440146Z",
+     "start_time": "2025-01-28T18:21:25.712100Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# WARNING: flash_attention_2 required pip install flash-attn which needs C++ builds tools\n",
@@ -143,19 +364,44 @@
     ")"
    ],
    "id": "ce3db8ac1a8d05c8",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "db599a912b824ab88fcbf08494defabe"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 9
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T18:21:28.646710Z",
+     "start_time": "2025-01-28T18:21:28.442151Z"
+    }
+   },
    "cell_type": "code",
    "source": "tokenizer = AutoTokenizer.from_pretrained(base_model_path, trust_remote_code=True)",
    "id": "8020da79ce3618a2",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 10
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T18:21:28.665402Z",
+     "start_time": "2025-01-28T18:21:28.662816Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "tokenizer.chat_template = \"\"\"\n",
@@ -167,10 +413,15 @@
    ],
    "id": "956fdf1a8d3428b5",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 11
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T18:21:28.684226Z",
+     "start_time": "2025-01-28T18:21:28.678847Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "test_messages = [\n",
@@ -182,11 +433,31 @@
     "print(\"Test output:\", tokenizer.apply_chat_template(test_messages, tokenize=False))"
    ],
    "id": "d6a8d65164d0a1a3",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test output: \n",
+      "<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
+      "You are a classification system...\n",
+      "<|eot_id|><|begin_of_text|><|start_header_id|>user<|end_header_id|>\n",
+      "Message for review: test\n",
+      "<|eot_id|><|begin_of_text|><|start_header_id|>assistant<|end_header_id|>\n",
+      "true\n",
+      "<|eot_id|>\n"
+     ]
+    }
+   ],
+   "execution_count": 12
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T18:21:29.408223Z",
+     "start_time": "2025-01-28T18:21:28.697866Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "from functools import partial\n",
@@ -221,11 +492,31 @@
     ")"
    ],
    "id": "bf843b706515345b",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Map:   0%|          | 0/14920 [00:00<?, ? examples/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "52a2e45209904dfca829da5745317498"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 13
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T18:21:29.623192Z",
+     "start_time": "2025-01-28T18:21:29.424682Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "test_dataset = Dataset.from_pandas(pd.read_csv(test_dataset_path))\n",
@@ -237,11 +528,31 @@
     ")"
    ],
    "id": "b010b71dc3d46ed9",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Map:   0%|          | 0/3730 [00:00<?, ? examples/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "aee893d09d35471185a634b7b762004a"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 14
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T18:21:29.723434Z",
+     "start_time": "2025-01-28T18:21:29.638473Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "peft_config = LoraConfig(\n",
@@ -257,10 +568,15 @@
    ],
    "id": "8fd2c40131e850aa",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 15
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T18:21:29.786743Z",
+     "start_time": "2025-01-28T18:21:29.740578Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "training_arguments = TrainingArguments(\n",
@@ -271,7 +587,7 @@
     "    optim=\"paged_adamw_32bit\",\n",
     "    num_train_epochs=10,\n",
     "    eval_strategy=\"steps\",\n",
-    "    eval_steps=1,\n",
+    "    eval_steps=0.5,\n",
     "    warmup_steps=100,\n",
     "    learning_rate=5e-5,\n",
     "    fp16=False,\n",
@@ -292,10 +608,15 @@
    ],
    "id": "f0aee664e91757ee",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 16
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T18:21:41.072806Z",
+     "start_time": "2025-01-28T18:21:29.802759Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "trainer = SFTTrainer(\n",
@@ -307,15 +628,80 @@
     ")"
    ],
    "id": "3503b45bfcc974f",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Map:   0%|          | 0/14920 [00:00<?, ? examples/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "b5504d85283e4dc99cce14da2a9844e2"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Map:   0%|          | 0/3730 [00:00<?, ? examples/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "1e12a961c4b24ccfa71ed45bc59611ef"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 17
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2025-01-28T18:21:41.091110Z"
+    }
+   },
    "cell_type": "code",
    "source": "trainer.train()",
    "id": "430323e15ceda5c4",
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='20' max='4660' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [  20/4660 01:01 < 4:25:21, 0.29 it/s, Epoch 0.04/10]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Step</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "execution_count": null
   }
  ],
