switched eval strategy to eval at end of each epoch (I think)

--- a/notebooks/model_finetune.ipynb
+++ b/notebooks/model_finetune.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T18:21:20.631802Z",
-     "start_time": "2025-01-28T18:21:19.722825Z"
+     "end_time": "2025-01-28T19:09:38.162020Z",
+     "start_time": "2025-01-28T19:09:37.282700Z"
     }
    },
    "cell_type": "code",
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T18:21:20.639144Z",
-     "start_time": "2025-01-28T18:21:20.633849Z"
+     "end_time": "2025-01-28T19:09:38.172092Z",
+     "start_time": "2025-01-28T19:09:38.167605Z"
     }
    },
    "cell_type": "code",
@@ -60,8 +60,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T18:21:23.277436Z",
-     "start_time": "2025-01-28T18:21:20.708055Z"
+     "end_time": "2025-01-28T19:09:40.753432Z",
+     "start_time": "2025-01-28T19:09:38.236903Z"
     }
    },
    "cell_type": "code",
@@ -89,8 +89,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T18:21:23.546031Z",
-     "start_time": "2025-01-28T18:21:23.281252Z"
+     "end_time": "2025-01-28T19:09:41.039192Z",
+     "start_time": "2025-01-28T19:09:40.756846Z"
     }
    },
    "cell_type": "code",
@@ -106,8 +106,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T18:21:25.383136Z",
-     "start_time": "2025-01-28T18:21:23.550248Z"
+     "end_time": "2025-01-28T19:09:42.878957Z",
+     "start_time": "2025-01-28T19:09:41.042511Z"
     }
    },
    "cell_type": "code",
@@ -151,7 +151,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "Run data is saved locally in <code>E:\\PyCharm\\PycharmProjects\\repurposed-llm-phishing-classifier\\notebooks\\wandb\\run-20250129_022124-hphrnlup</code>"
+       "Run data is saved locally in <code>E:\\PyCharm\\PycharmProjects\\repurposed-llm-phishing-classifier\\notebooks\\wandb\\run-20250129_030942-y90m7nud</code>"
       ]
      },
      "metadata": {},
@@ -163,7 +163,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/hphrnlup?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">atomic-elevator-10</a></strong> to <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+       "Syncing run <strong><a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/y90m7nud?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">colorful-pond-13</a></strong> to <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
       ]
      },
      "metadata": {},
@@ -187,7 +187,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       " View run at <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/hphrnlup?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/hphrnlup?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986</a>"
+       " View run at <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/y90m7nud?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/y90m7nud?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986</a>"
       ]
      },
      "metadata": {},
@@ -211,8 +211,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T18:21:25.390451Z",
-     "start_time": "2025-01-28T18:21:25.387327Z"
+     "end_time": "2025-01-28T19:09:42.885960Z",
+     "start_time": "2025-01-28T19:09:42.883615Z"
     }
    },
    "cell_type": "code",
@@ -229,8 +229,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T18:21:25.669359Z",
-     "start_time": "2025-01-28T18:21:25.394531Z"
+     "end_time": "2025-01-28T19:09:43.168302Z",
+     "start_time": "2025-01-28T19:09:42.889481Z"
     }
    },
    "cell_type": "code",
@@ -328,8 +328,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T18:21:25.691893Z",
-     "start_time": "2025-01-28T18:21:25.689452Z"
+     "end_time": "2025-01-28T19:09:43.192179Z",
+     "start_time": "2025-01-28T19:09:43.189324Z"
     }
    },
    "cell_type": "code",
@@ -347,8 +347,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T18:21:28.440146Z",
-     "start_time": "2025-01-28T18:21:25.712100Z"
+     "end_time": "2025-01-28T19:09:46.025648Z",
+     "start_time": "2025-01-28T19:09:43.221792Z"
     }
    },
    "cell_type": "code",
@@ -373,7 +373,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "db599a912b824ab88fcbf08494defabe"
+       "model_id": "ced15ee977394449b9aa8a4fecefabb5"
       }
      },
      "metadata": {},
@@ -385,8 +385,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T18:21:28.646710Z",
-     "start_time": "2025-01-28T18:21:28.442151Z"
+     "end_time": "2025-01-28T19:09:46.229765Z",
+     "start_time": "2025-01-28T19:09:46.028236Z"
     }
    },
    "cell_type": "code",
@@ -398,8 +398,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T18:21:28.665402Z",
-     "start_time": "2025-01-28T18:21:28.662816Z"
+     "end_time": "2025-01-28T19:09:46.248431Z",
+     "start_time": "2025-01-28T19:09:46.245226Z"
     }
    },
    "cell_type": "code",
@@ -418,8 +418,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T18:21:28.684226Z",
-     "start_time": "2025-01-28T18:21:28.678847Z"
+     "end_time": "2025-01-28T19:09:46.267510Z",
+     "start_time": "2025-01-28T19:09:46.261695Z"
     }
    },
    "cell_type": "code",
@@ -454,8 +454,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T18:21:29.408223Z",
-     "start_time": "2025-01-28T18:21:28.697866Z"
+     "end_time": "2025-01-28T19:09:47.032510Z",
+     "start_time": "2025-01-28T19:09:46.282023Z"
     }
    },
    "cell_type": "code",
@@ -501,7 +501,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "52a2e45209904dfca829da5745317498"
+       "model_id": "3cc1c10947904b24a765d79650e206a9"
       }
      },
      "metadata": {},
@@ -513,8 +513,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T18:21:29.623192Z",
-     "start_time": "2025-01-28T18:21:29.424682Z"
+     "end_time": "2025-01-28T19:09:47.257443Z",
+     "start_time": "2025-01-28T19:09:47.051493Z"
     }
    },
    "cell_type": "code",
@@ -537,7 +537,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "aee893d09d35471185a634b7b762004a"
+       "model_id": "d58bc42554ff408ca47679423e1ced96"
       }
      },
      "metadata": {},
@@ -549,8 +549,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T18:21:29.723434Z",
-     "start_time": "2025-01-28T18:21:29.638473Z"
+     "end_time": "2025-01-28T19:09:47.368792Z",
+     "start_time": "2025-01-28T19:09:47.273310Z"
     }
    },
    "cell_type": "code",
@@ -573,8 +573,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T18:21:29.786743Z",
-     "start_time": "2025-01-28T18:21:29.740578Z"
+     "end_time": "2025-01-28T19:09:47.437003Z",
+     "start_time": "2025-01-28T19:09:47.387815Z"
     }
    },
    "cell_type": "code",
@@ -586,8 +586,9 @@
     "    gradient_accumulation_steps=16,\n",
     "    optim=\"paged_adamw_32bit\",\n",
     "    num_train_epochs=10,\n",
-    "    eval_strategy=\"steps\",\n",
-    "    eval_steps=0.5,\n",
+    "    save_strategy=\"epoch\",\n",
+    "    eval_strategy=\"epoch\",\n",
+    "    do_eval=True,\n",
     "    warmup_steps=100,\n",
     "    learning_rate=5e-5,\n",
     "    fp16=False,\n",
@@ -613,8 +614,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T18:21:41.072806Z",
-     "start_time": "2025-01-28T18:21:29.802759Z"
+     "end_time": "2025-01-28T19:09:59.184659Z",
+     "start_time": "2025-01-28T19:09:47.455918Z"
     }
    },
    "cell_type": "code",
@@ -637,7 +638,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b5504d85283e4dc99cce14da2a9844e2"
+       "model_id": "580e6ec231aa496da648907d188cd5ee"
       }
      },
      "metadata": {},
@@ -651,7 +652,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "1e12a961c4b24ccfa71ed45bc59611ef"
+       "model_id": "f2567048a153469ea8bd5ecb27f7ab79"
       }
      },
      "metadata": {},
@@ -666,7 +667,7 @@
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2025-01-28T18:21:41.091110Z"
+     "start_time": "2025-01-28T19:09:59.202918Z"
     }
    },
    "cell_type": "code",
@@ -682,13 +683,13 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='20' max='4660' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [  20/4660 01:01 < 4:25:21, 0.29 it/s, Epoch 0.04/10]\n",
+       "      <progress value='16' max='4660' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [  16/4660 00:51 < 4:44:33, 0.27 it/s, Epoch 0.03/10]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        " <tr style=\"text-align: left;\">\n",
-       "      <th>Step</th>\n",
+       "      <th>Epoch</th>\n",
        "      <th>Training Loss</th>\n",
        "      <th>Validation Loss</th>\n",
        "    </tr>\n",
