update lora config to include O proj, down proj, and up proj

--- a/notebooks/model_finetune.ipynb
+++ b/notebooks/model_finetune.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T19:09:38.162020Z",
-     "start_time": "2025-01-28T19:09:37.282700Z"
+     "end_time": "2025-01-29T02:13:30.445834Z",
+     "start_time": "2025-01-29T02:13:29.532235Z"
     }
    },
    "cell_type": "code",
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T19:09:38.172092Z",
-     "start_time": "2025-01-28T19:09:38.167605Z"
+     "end_time": "2025-01-29T02:13:30.457028Z",
+     "start_time": "2025-01-29T02:13:30.451027Z"
     }
    },
    "cell_type": "code",
@@ -60,8 +60,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T19:09:40.753432Z",
-     "start_time": "2025-01-28T19:09:38.236903Z"
+     "end_time": "2025-01-29T02:13:33.119984Z",
+     "start_time": "2025-01-29T02:13:30.526815Z"
     }
    },
    "cell_type": "code",
@@ -89,8 +89,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T19:09:41.039192Z",
-     "start_time": "2025-01-28T19:09:40.756846Z"
+     "end_time": "2025-01-29T02:13:33.421734Z",
+     "start_time": "2025-01-29T02:13:33.121987Z"
     }
    },
    "cell_type": "code",
@@ -106,8 +106,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T19:09:42.878957Z",
-     "start_time": "2025-01-28T19:09:41.042511Z"
+     "end_time": "2025-01-29T02:13:35.324535Z",
+     "start_time": "2025-01-29T02:13:33.425193Z"
     }
    },
    "cell_type": "code",
@@ -151,7 +151,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "Run data is saved locally in <code>E:\\PyCharm\\PycharmProjects\\repurposed-llm-phishing-classifier\\notebooks\\wandb\\run-20250129_030942-y90m7nud</code>"
+       "Run data is saved locally in <code>E:\\PyCharm\\PycharmProjects\\repurposed-llm-phishing-classifier\\notebooks\\wandb\\run-20250129_101334-am0xyz8j</code>"
       ]
      },
      "metadata": {},
@@ -163,7 +163,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/y90m7nud?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">colorful-pond-13</a></strong> to <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+       "Syncing run <strong><a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/am0xyz8j?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">clear-mountain-15</a></strong> to <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
       ]
      },
      "metadata": {},
@@ -187,7 +187,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       " View run at <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/y90m7nud?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/y90m7nud?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986</a>"
+       " View run at <a href='https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/am0xyz8j?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986' target=\"_blank\">https://wandb.ai/morganj-lee01-team/repurposed-llm-phishing-classifier/runs/am0xyz8j?apiKey=2a1b3aadd29eb165c80f5d6458a4058c07a5a986</a>"
       ]
      },
      "metadata": {},
@@ -211,8 +211,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T19:09:42.885960Z",
-     "start_time": "2025-01-28T19:09:42.883615Z"
+     "end_time": "2025-01-29T02:13:35.331695Z",
+     "start_time": "2025-01-29T02:13:35.328682Z"
     }
    },
    "cell_type": "code",
@@ -229,8 +229,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T19:09:43.168302Z",
-     "start_time": "2025-01-28T19:09:42.889481Z"
+     "end_time": "2025-01-29T02:13:35.625251Z",
+     "start_time": "2025-01-29T02:13:35.335729Z"
     }
    },
    "cell_type": "code",
@@ -328,8 +328,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T19:09:43.192179Z",
-     "start_time": "2025-01-28T19:09:43.189324Z"
+     "end_time": "2025-01-29T02:13:35.647302Z",
+     "start_time": "2025-01-29T02:13:35.644745Z"
     }
    },
    "cell_type": "code",
@@ -347,8 +347,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T19:09:46.025648Z",
-     "start_time": "2025-01-28T19:09:43.221792Z"
+     "end_time": "2025-01-29T02:13:38.402991Z",
+     "start_time": "2025-01-29T02:13:35.666675Z"
     }
    },
    "cell_type": "code",
@@ -373,7 +373,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "ced15ee977394449b9aa8a4fecefabb5"
+       "model_id": "53fd23eda9ee4401a0845d3f914728c5"
       }
      },
      "metadata": {},
@@ -385,8 +385,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T19:09:46.229765Z",
-     "start_time": "2025-01-28T19:09:46.028236Z"
+     "end_time": "2025-01-29T02:13:38.605307Z",
+     "start_time": "2025-01-29T02:13:38.404995Z"
     }
    },
    "cell_type": "code",
@@ -398,8 +398,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T19:09:46.248431Z",
-     "start_time": "2025-01-28T19:09:46.245226Z"
+     "end_time": "2025-01-29T02:13:38.622115Z",
+     "start_time": "2025-01-29T02:13:38.619313Z"
     }
    },
    "cell_type": "code",
@@ -418,8 +418,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T19:09:46.267510Z",
-     "start_time": "2025-01-28T19:09:46.261695Z"
+     "end_time": "2025-01-29T02:13:38.642318Z",
+     "start_time": "2025-01-29T02:13:38.635787Z"
     }
    },
    "cell_type": "code",
@@ -454,8 +454,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T19:09:47.032510Z",
-     "start_time": "2025-01-28T19:09:46.282023Z"
+     "end_time": "2025-01-29T02:13:39.374657Z",
+     "start_time": "2025-01-29T02:13:38.657056Z"
     }
    },
    "cell_type": "code",
@@ -501,7 +501,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "3cc1c10947904b24a765d79650e206a9"
+       "model_id": "5913a97180bc4b91878c7acffdafc8b2"
       }
      },
      "metadata": {},
@@ -513,8 +513,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T19:09:47.257443Z",
-     "start_time": "2025-01-28T19:09:47.051493Z"
+     "end_time": "2025-01-29T02:13:39.591584Z",
+     "start_time": "2025-01-29T02:13:39.388899Z"
     }
    },
    "cell_type": "code",
@@ -537,7 +537,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "d58bc42554ff408ca47679423e1ced96"
+       "model_id": "fb4ddfacda224c24b8a0633b6fad3fa9"
       }
      },
      "metadata": {},
@@ -549,8 +549,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T19:09:47.368792Z",
-     "start_time": "2025-01-28T19:09:47.273310Z"
+     "end_time": "2025-01-29T02:13:39.778661Z",
+     "start_time": "2025-01-29T02:13:39.606593Z"
     }
    },
    "cell_type": "code",
@@ -558,7 +558,10 @@
     "peft_config = LoraConfig(\n",
     "    r=16,\n",
     "    lora_alpha=32,\n",
-    "    target_modules=[\"q_proj\", \"v_proj\"],\n",
+    "    target_modules=[\n",
+    "        \"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",\n",
+    "        \"down_proj\", \"up_proj\"\n",
+    "    ],\n",
     "    bias=\"none\",\n",
     "    task_type=\"CAUSAL_LM\",\n",
     "    inference_mode=False\n",
@@ -573,8 +576,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T19:09:47.437003Z",
-     "start_time": "2025-01-28T19:09:47.387815Z"
+     "end_time": "2025-01-29T02:13:39.834894Z",
+     "start_time": "2025-01-29T02:13:39.799240Z"
     }
    },
    "cell_type": "code",
@@ -585,7 +588,7 @@
     "    per_device_eval_batch_size=2,\n",
     "    gradient_accumulation_steps=16,\n",
     "    optim=\"paged_adamw_32bit\",\n",
-    "    num_train_epochs=10,\n",
+    "    num_train_epochs=15,\n",
     "    save_strategy=\"epoch\",\n",
     "    eval_strategy=\"epoch\",\n",
     "    do_eval=True,\n",
@@ -596,7 +599,7 @@
     "    group_by_length=True,\n",
     "    report_to=\"wandb\",\n",
     "    neftune_noise_alpha=0.1,\n",
-    "    run_name=\"actual_run_1\",\n",
+    "    run_name=\"actual_run_2\",\n",
     "    logging_first_step=True,\n",
     "    logging_dir=\"../logs\",\n",
     "    logging_strategy=\"steps\",\n",
@@ -614,8 +617,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-28T19:09:59.184659Z",
-     "start_time": "2025-01-28T19:09:47.455918Z"
+     "end_time": "2025-01-29T02:13:51.171556Z",
+     "start_time": "2025-01-29T02:13:39.857007Z"
     }
    },
    "cell_type": "code",
@@ -638,7 +641,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "580e6ec231aa496da648907d188cd5ee"
+       "model_id": "fa7b31a237a64904a3b54a82a7d0841d"
       }
      },
      "metadata": {},
@@ -652,7 +655,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "f2567048a153469ea8bd5ecb27f7ab79"
+       "model_id": "cc09441d49fe486e9ae2f1456d63caa5"
       }
      },
      "metadata": {},
@@ -667,42 +670,13 @@
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2025-01-28T19:09:59.202918Z"
+     "start_time": "2025-01-29T02:13:51.190088Z"
     }
    },
    "cell_type": "code",
    "source": "trainer.train()",
    "id": "430323e15ceda5c4",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='16' max='4660' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [  16/4660 00:51 < 4:44:33, 0.27 it/s, Epoch 0.03/10]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Epoch</th>\n",
-       "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "execution_count": null
   }
  ],
